--- a/HTML_LEVEL_ONE/basics.html
+++ b/HTML_LEVEL_ONE/basics.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>This is the Title!</title>
+</head>
+<body>
+    <!-- ANYTHING HERE IS A COMMENT-->
+    
+</body>
+</html>
